@@ -1,3 +1,8 @@
+2017-12-04  Jörg Höhle  <hoehle@users.sourceforge.net>
+
+	* modules/regexp/regexi.c (REGEXP-EXEC): Compute character string
+	index based on the current O(misc_encoding).
+
 2017-12-04  Sam Steingold  <sds@gnu.org>
 
 	* configure.in: Move gl_EARLY before AC_LIB_PROG_LD to avoid aclocal
